# PartB

./: AshesiAsALivingLab.cpp  AshesiAsALivingLab.h  CMakeLists.txt  main.cpp
