cmake_minimum_required(VERSION 3.13)
project(IcpLab6)

set(CMAKE_CXX_STANDARD 14)

#add_executable(IcpLab6 SimpleInterest.cpp)
#add_executable(SimpleInterest "Part A/SimpleInterest.cpp")
#add_executable(ConvertCurrency "Part A/ConvertCurrency.cpp")

#add_executable(AshesiAsALivingLab AshesiAsALivingLab.cpp)
add_executable(main main.cpp)
#add_executable(PerimeterOfRectangle "Part A/PerimeterOfRectangle.cpp")
#add_executable(CalculateRatio "Part A/CalculateRatio.cpp")
